Fix inaccurate %CPU values in the Processes table

Multi-core machines were displaying inaccurate %CPU values due to a
loss of precision from performing integer division before multiplication.
This changes the order of operations so that no precision is lost, and
now all machines will display process %CPU values to within 1% accuracy.

https://bugzilla.gnome.org/show_bug.cgi?id=788922
Signed-off-by: Benoît Dejean <bdejean@gmail.com>